--- a/HW1/CycleShare.ipynb
+++ b/HW1/CycleShare.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b85e4307",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd   # 导入数据框处理工具包\n",
@@ -27,7 +31,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "be40d19c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -46,7 +54,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "1615959e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -91,7 +103,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "8479871e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -127,7 +143,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "9c549df3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "weather.drop(['Max_Temperature_F','Min_TemperatureF',\n",
@@ -151,7 +171,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "4d25f244",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     " #  转换为时间序列\n",
@@ -171,7 +195,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "f11d4629",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -283,7 +311,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "91942cd6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "groupby_age = trip.dropna()\n",
@@ -310,7 +342,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "3e2fd9c0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -426,7 +462,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "13b37114",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -475,7 +515,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "92857668",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -605,7 +649,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "5756e7ed",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -676,7 +724,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "a12ae206",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -745,7 +797,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "56f7b42e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
